--- a/demo/Solar_System/Solar_System_Pseudo-elements.html
+++ b/demo/Solar_System/Solar_System_Pseudo-elements.html
@@ -7,7 +7,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: #080e24;
+            background: #1E1D3D;
         }
 
         .SolarSystem{
@@ -43,11 +43,11 @@
 
         /*太阳*/
         li:nth-child(1) {
-            width: 80px;
-            height: 80px;
+            width: 70px;
+            height: 70px;
             border: none;
             background-color: yellow;
-            box-shadow: 0 0 30px 3px gold;
+            box-shadow: 0 0 40px 5px gold;
 
         }
 
@@ -166,7 +166,7 @@
             width: 450px;
             height: 450px;
             border: none;
-            background-image: url(images/Asteroid_belt.png);
+           /* background-image: url(images/Asteroid_belt.png);*/
             background-size: cover;
             animation-duration: 50s;
         }
