--- a/My_Resume/index.html
+++ b/My_Resume/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <title>Title</title>
+    <title>My_Resume</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/normalize.css">
@@ -49,7 +49,11 @@
                                 <span>学历/本科</span>
                             </li>
                             <li class="col-xs-6 col-sm-3 col-md-3">
-                                <div></div>
+                                <div>
+                                    <img src="images/xingzuo.png" alt="">
+                                    <div class="play"></div>
+                                </div>
+                                <span>星座/水瓶</span>
                             </li>
                         </ul>
                     </div>
