--- a/My_Resume/index.html
+++ b/My_Resume/index.html
@@ -14,6 +14,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.fullPage.min.js"></script>
     <script src="js/zz.js"></script>
+    <!--<script src="js/map.js"></script>-->
 </head>
 
 <body>
@@ -34,12 +35,13 @@
                                 </div>
                                 <span>年龄/23</span>
                             </li>
-                            <li class="col-xs-6 col-sm-3 col-md-3">
+                            <li class="col-xs-6 col-sm-3 col-md-3 map">
                                 <div>
                                     <img src="images/zuobiao.png" alt="">
-                                    <div class="play"></div>
+                                    <div class="play"><a href="map.html"></a></div>
                                 </div>
                                 <span>坐标/福州</span>
+                                <!--<map class="map"></map>-->
                             </li>
                             <li class="col-xs-6 col-sm-3 col-md-3">
                                 <div>
@@ -106,19 +108,8 @@
                         <div class="col-xs-6 col-sm-6 col-md-6"><a href="javascript:void(0);"><i></i><span>156-5989-9211</span></a></div>
                     </div>
                 </div>
-
-
             </div>
         </div>
-
-
     </div>
-
-
-
-
-
-
-
 </body>
 </html>
