--- a/My_Resume/index.html
+++ b/My_Resume/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <title>My_Resume</title>
+    <title>我的简历</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/normalize.css">
@@ -38,7 +38,7 @@
                             <li class="col-xs-6 col-sm-3 col-md-3 map">
                                 <div>
                                     <img src="images/zuobiao.png" alt="">
-                                    <div class="play"><a href="map.html"></a></div>
+                                    <div class="play"><a href="map.html"  target="_blank"></a></div>
                                 </div>
                                 <span>坐标/福州</span>
                                 <!--<map class="map"></map>-->
