--- a/My_Resume/map.html
+++ b/My_Resume/map.html
@@ -14,14 +14,12 @@
         body, button, input, select, textarea {
             font: 12px/16px Verdana, Helvetica, Arial, sans-serif;
         }
-        p{
-            width:603px;
-            padding-top:3px;
-            overflow:hidden;
-        }
+
         #container {
             min-width:603px;
             min-height:767px;
+            /*height: 100%;
+            width: 100%;*/
         }
     </style>
 
