--- a/My_Resume/index.html
+++ b/My_Resume/index.html
@@ -38,9 +38,9 @@
                             <li class="col-xs-6 col-sm-3 col-md-3 map">
                                 <div>
                                     <img src="images/zuobiao.png" alt="">
-                                   <!--  <div class="play"><a href="map.html" target="_blank"></a></div> -->
+                                    <div class="play"><a href="map.html"  target="_blank"></a></div>
                                     <!-- 因为github原因链接到地址为这个，正常情况应该链接到 "map.html" -->
-                                    <div class="play"><a href="http://htmlpreview.github.io/?https://github.com/MaxQAQ/a_1024/blob/master/My_Resume/map.html" target="_blank"></a></div>
+                                  <!--   <div class="play"><a href="http://htmlpreview.github.io/?https://github.com/MaxQAQ/a_1024/blob/master/My_Resume/map.html"  target="_blank"></a></div> -->
 
                                 </div>
                                 <span>坐标/福州</span>
