--- a/My_Resume/index.html
+++ b/My_Resume/index.html
@@ -94,7 +94,7 @@
                     <div class="zwpj_content">
                         您好，我是杨大强，23岁，坐标福州。<br>
                         我是今年6月份毕业，虽然并不是计算机专业,但对前端很感兴趣， 所以自学前端。
-                        在大学期间陆续接触、学习过一些前端的内容，今后的职业规划是朝着全栈发展，现在在学习Bootstrap和AngularJS。<br>
+                        在大学期间陆续接触、学习过一些前端的内容，今后的职业规划是朝着全栈发展，现在在学习Bootstrap和Vue.js。<br>
                         <span>喜欢尝试，喜欢前端，期待新鲜事物。执行力，学习能力都很Nice！</span>目前，能做点粗糙设计。
                     </div>
                 </div>
