--- a/720tec/index.html
+++ b/720tec/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/normalize.css">
 
+
     <link rel="stylesheet/less" type="text/css" href="css/main.less" />
     <script src="js/less.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css/main.css">
 
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
